--- a/css/position_fixed.css
+++ b/css/position_fixed.css
@@ -1,4 +1,4 @@
-{    
+*{ 
     position: fixed;
     margin: 0;
     padding: 0;
@@ -11,4 +11,5 @@ img{
     position: fixed;
     right: 5%;
     bottom: 20%;
-}
+
+} 
