--- a/Animação/Animação.css
+++ b/Animação/Animação.css
@@ -22,12 +22,18 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
-
+    margin: 7px;
+    background: red;
+    transition: background 1s;
+    animation: fade-in 5s ease-out;
+    animation: go-back-1 4s;
   }
-  
+      
+  .logo:hover,
+  .logo:focus {
+  background: orangered;
+}
+    
   .Logo2{
     width: 125px;
     height: 125px;
@@ -36,11 +42,18 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back-2 4s;
     
   }
+  .Logo2:hover,
+  .logo2:focus {
+    background: greenyellow;
+  }
+
   .Logo3{
     width: 125px;
     height: 125px;
@@ -49,10 +62,17 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back-3 4s;
     
+  }
+
+  .Logo3:hover,
+  .Logo3:focus {
+    background: greenyellow;
   }
 
   .Logo4{
@@ -63,10 +83,17 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back-1 2s;
     
+  }
+
+  .Logo4:hover,
+  .Logo4:focus {
+    background: greenyellow;
   }
 
   #coluna2{
@@ -74,13 +101,6 @@ body{
     margin: 0px
   }
  
-  .Logo13{
-    border-radius: 25%;
-    display: block;
-    align-items: left;
-    justify-content: left;
-    margin: 15px;
-    }
 
 .Logo5{
     width: 125px;
@@ -90,11 +110,19 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back-5 2s;
     
   }
+
+  .Logo5:hover,
+  .Logo5:focus {
+    background: greenyellow;
+  }
+
   .Logo6{
     width: 125px;
     height: 125px;
@@ -103,11 +131,18 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
-  
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back-6  2s;
   }
+
+  .Logo6:hover,
+  .Logo6:focus {
+    background: greenyellow;
+  }
+
   .Logo7{
     width: 125px;
     height: 125px;
@@ -116,11 +151,18 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
-    
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back 2s;
   }
+
+  .Logo7:hover,
+  .Logo7:focus {
+    background: greenyellow;
+  }
+
   .Logo8{
     width: 125px;
     height: 125px;
@@ -129,11 +171,19 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back 2s;
     
   }
+
+  .Logo8:hover,
+  .Logo8:focus {
+    background: greenyellow;
+  }
+
   #coluna3{
     flex-direction: column;
     margin: 0px;
@@ -146,11 +196,19 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back-6 4s;
     
   }
+
+  .Logo9:hover,
+  .Logo9:focus {
+    background: greenyellow;
+  }
+
   .Logo10{
     width: 125px;
     height: 125px;
@@ -159,10 +217,8 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
-    
+    margin: 7px;
+     
   }
   .Logo11{
     width: 125px;
@@ -172,11 +228,19 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
+    margin: 7px;
+    animation: fade-in 5s ease-out;
+    background: green;
+    transition: background 1s;
+    animation: go-back-6 4s;
     
   }
+
+  .Logo11:hover,
+  .Logo11:focus {
+    background: greenyellow;
+  }
+
   .Logo12{
     width: 125px;
     height: 125px;
@@ -185,10 +249,8 @@ body{
     display: block;
     align-items: left;
     justify-content: left;
-    margin: 15px;
-    animation: pulse 1s infinite alternate;
-    animation: fade-in 2s ease-out;
-    
+    margin: 7px;
+     
   }
   .foguete {
 	position: fixed;
@@ -200,6 +262,17 @@ body{
 	animation: foguete 10s linear infinite;
 }
 
+.nave{
+  position: fixed;
+  justify-content: inherit;
+  align-items: inherit;
+  top: 0%;
+  right: 0%;
+  animation: go-back-7 4s;
+  animation-fill-mode: forwards;
+  animation-delay: 3s;
+}
+
 @keyframes foguete {
 	0% {
 		transform: rotate(0deg)
@@ -207,15 +280,6 @@ body{
 	100% {
 		transform: rotate(400deg);
 	}
-}
-
-@keyframes pulse {
-	0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.1);
-}
 }
 
 @keyframes fade-in {
@@ -228,3 +292,77 @@ body{
   }
 }
 
+@keyframes go-back {
+  from {
+    transform: translateX(700px);
+  }
+  to {
+    transform: translateX(0px);
+  }
+}
+
+  @keyframes go-back-1 {
+    from {
+      transform: translateX(-700px);
+    }
+    to {
+      transform: translateX(0px);
+    }
+  }
+
+  @keyframes go-back-2 {
+    from {
+      transform: translateX(-400px);
+    }
+    to {
+      transform: translateX(0px);
+    }
+  }
+
+  @keyframes go-back-3 {
+    from {
+      transform: translateX(-1000px);
+    }
+    to {
+      transform: translateX(0px);
+    }
+  }
+
+  @keyframes go-back-4 {
+    from {
+      transform: translateX(500px);
+    }
+    to {
+      transform: translateX(0px);
+    }
+  }
+
+  @keyframes go-back-5 {
+    from {
+      transform: translateX(-200px);
+    }
+    to {
+      transform: translateX(0px);
+    }
+  }
+
+  @keyframes go-back-6 {
+    from {
+      transform: translateX(4000px);
+    }
+    to {
+      transform: translateX(0px);
+    }
+}
+
+  @keyframes go-back-7 {
+    from{
+      transform: translateX(0px);
+    }
+    to {
+      transform: translateX(-879px);
+      top: 8%;
+    } 
+
+    }
+  
